--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <title>this is my website</title>
 <h1>this is my beautiful website</h1>
+<h2>hurray</h2>
 <p>welcome</p>
 <p>user</p>
 <p> :) :D </p>
